--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	        		<li><a href="/">主页</a></li>
 		        	<li><a href="/about">关于</a></li>
 	        		<!-- <li><a href="/cv">CV</a></li> -->
-	        		<!-- <li><a href="/blog">Blog</a></li> -->
+	        		<li><a href="/blog">所有文章</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
