--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-            <link rel="stylesheet" type="text/css" href="/css/main.css">
-            <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">主页</a></li>
-		        	<li><a href="/about">关于</a></li>
-	        		<!-- <li><a href="/cv">CV</a></li> -->
-	        		<li><a href="/blog">所有文章</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:tkyouyi218@gmail.com">邮件</a></li>
-                    <li><a href="https://github.com/youyi218">Github</a></li>
-                    <li><a href="https://twitter.com/youyi218">Twitter</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+<html>
+
+<head>
+	<title>{{ page.title }}</title>
+	<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+</head>
+
+<body>
+	<nav>
+		<ul>
+			<li><a href="/">主页</a></li>
+			<li><a href="/about">关于</a></li>
+			<!-- <li><a href="/cv">CV</a></li> -->
+			<li><a href="/blog">所有文章</a></li>
+			<li><a href="/tags">标签</a></li>
+		</ul>
+	</nav>
+	<div class="container">
+
+		{{ content }}
+
+	</div><!-- /.container -->
+	<footer>
+		<ul>
+			<li><a href="mailto:tkyouyi218@gmail.com">邮件</a></li>
+			<li><a href="https://github.com/youyi218">Github</a></li>
+			<li><a href="https://twitter.com/youyi218">Twitter</a></li>
+		</ul>
+	</footer>
+</body>
+
+</html>
