--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,15 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<p class="meta">
+  {{ page.date | date_to_string }}
+  {% if page.tags %}
+    | Tags: 
+    {% for tag in page.tags %}
+      <a href="{{ site.baseurl }}/tags#{{ tag }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+    {% endfor %}
+  {% endif %}
+</p>
 
 <div class="post">
   {{ content }}
