--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,11 @@ layout: default
 <p class="meta">
   {{ page.date | date_to_string }}
   {% if page.tags %}
-    | Tags: 
-    {% for tag in page.tags %}
-      <a href="{{ site.baseurl }}/tags#{{ tag }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
-    {% endfor %}
+  | Tags:
+  {% for tag in page.tags %}
+  {% assign tag_name = site.data.tags[tag] | default: tag %}
+  <a href="{{ site.baseurl }}/tags#{{ tag }}">{{ tag_name }}</a>{% unless forloop.last %}, {% endunless %}
+  {% endfor %}
   {% endif %}
 </p>
 
